--- a/Example/package.json
+++ b/Example/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "expo": "~37.0.3",
     "expo-blur": "~8.1.0",
+    "fbjs": "^1.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -26,10 +27,10 @@
     "@babel/runtime": "^7.9.2",
     "@types/expo": "~33.0.1",
     "@types/expo__vector-icons": "^9.0.1",
+    "babel-plugin-module-resolver": "4.0.0",
     "babel-preset-expo": "~8.1.0",
     "escape-string-regexp": "^2.0.0",
-    "expo-cli": "^3.8.0",
-    "babel-plugin-module-resolver": "4.0.0"
+    "expo-cli": "^3.8.0"
   },
   "private": true
 }
